--- a/index.html
+++ b/index.html
@@ -20,27 +20,56 @@
         <div class="row">
             <div class="col-lg-3 bg-light">
                 <h4 class="mt-3">Search for a City:</h4>
-                <div class="input-group mb-3">
-                    <input id="enter-city" type="text" class="form-control" placeholder="Enter a city"
-                        aria-label="Enter a city">
+                <form class="input-group mb-3">
+                    <input id="enter-city" type="text" class="form-control" placeholder="Enter a city">
+
                     <div class="input-group-append">
-                        <button class="btn btn-primary" type="button" id="search-button">
+                        <button class="btn btn-primary" type="submit" id="searchBtn"> Search
                             <i class="fas fa-search"></i>
                         </button>
                     </div>
-                </div>
-                <button class="btn btn-primary mb-2" type="button" id="clear-history">Clear history</button>
+                </form>
+                <button class="btn btn-primary mb-3" type="button" id="clearBtn">Clear history</button>
                 <form id="history"></form>
             </div>
 
-            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-                integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
-                crossorigin="anonymous"></script>
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-                integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
-                crossorigin="anonymous"></script>
+            <div class="col-lg-9">
+                <div class="row mr-0">
+                    <div class="col-lg-12 card m-3 d-none" id="today-weather">
+                        <div class="card-body">
+                            <h3 id="city-name" class="city-name align-middle"></h3>
+                            <!-- <img id="current-pic" alt=""> -->
+                            <!-- <p id="temperature">ghfdgdfgd</p>
+                            <p id="humidity">fdsfdsfsd</p>
+                            <p id="wind-speed">fdsfsdfsd</p> -->
 
-            <script src="./assets/js/script.js"></script>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row d-none" id="five-day-header">
+                    <div class="col-12">
+                        <h3>5-Day Forecast</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                    <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
+
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
