--- a/index.html
+++ b/index.html
@@ -35,24 +35,24 @@
 
             <div class="col-lg-9">
                 <div class="row mr-0">
-                    <div class="col-lg-12 card m-3 d-none" id="today-weather">
+                    <div class="col-lg-12 card m-3" id="today-weather">
                         <div class="card-body">
                             <h3 id="city-name" class="city-name align-middle"></h3>
                             <!-- <img id="current-pic" alt=""> -->
-                            <!-- <p id="temperature">ghfdgdfgd</p>
-                            <p id="humidity">fdsfdsfsd</p>
-                            <p id="wind-speed">fdsfsdfsd</p> -->
+                            <p id="temperature"></p>
+                            <p id="humidity"></p>
+                            <p id="wind-speed"></p>
 
                         </div>
                     </div>
                 </div>
 
-                <div class="row d-none" id="five-day-header">
+                <div class="row" id="five-day-header">
                     <div class="col-12">
                         <h3>5-Day Forecast</h3>
                     </div>
                 </div>
-                <div class="row">
+                <div id="five-day-forecast" class="row">
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
                     <div class="col-md-2 forecast bg-primary text-white m-2 rounded"></div>
