--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                         <div class="card-body">
                             <h3 id="city-name" class="city-name align-middle"></h3>
                             <!-- <img id="current-pic" alt=""> -->
+                            <p id="icon"></p>
                             <p id="temperature"></p>
                             <p id="humidity"></p>
                             <p id="wind-speed"></p>
